--- a/README
+++ b/README
@@ -8,7 +8,7 @@ used by applications such as Unity and Plank.
 Dependencies: gir1.2-gdkpixbuf-2.0, gir1.2-glib-2.0, 
     gir1.2-gmenu-3.0 (>= 3.5.3), gir1.2-gtk-3.0, 
     gnome-menus (>= 3.5.3), python3, python3-gi (>= 3.0),
-    python3-psutil
+    python3-psutil, xdg-utils (xdg-desktop-menu commands)
 
 Please report comments, suggestions, and bugs to:
     Sean Davis <smd.seandavis@gmail.com>
