--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-04-20 20:43-0400\n"
-"PO-Revision-Date: 2013-04-18 08:07+0000\n"
-"Last-Translator: jc1 <jc1.quebecos@gmail.com>\n"
+"PO-Revision-Date: 2014-04-29 20:03+0000\n"
+"Last-Translator: Urien Desterres <urien.desterres@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-04-23 06:54+0000\n"
+"X-Launchpad-Export-Date: 2014-04-30 06:39+0000\n"
 "X-Generator: Launchpad (build 16985)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -25,7 +25,7 @@ msgstr "Éditeur de menus"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
-msgstr ""
+msgstr "Ajouter ou supprimer des applications du menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
@@ -50,7 +50,7 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:2471
 #: ../menulibre/MenulibreApplication.py:2577
 msgid "Cancel"
-msgstr ""
+msgstr "Annuler"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "Apply"
@@ -66,23 +66,23 @@ msgstr "Fichier image"
 
 #: ../data/ui/MenulibreWindow.ui.h:9
 msgid "<b>Select an image</b>"
-msgstr ""
+msgstr "<b>Sélectionner une image</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:10
 msgid "16px"
-msgstr ""
+msgstr "16 px"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "32px"
-msgstr ""
+msgstr "32 px"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid "64px"
-msgstr ""
+msgstr "64 px"
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "128px"
-msgstr ""
+msgstr "128 px"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "<b>Preview</b>"
@@ -139,11 +139,11 @@ msgstr "Descendre"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nom Application</b></big>"
+msgstr "<big><b>Nom de l’application</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Application Name"
-msgstr ""
+msgstr "Nom de l’application"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application Comment"
@@ -151,7 +151,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/MenulibreApplication.py:835
 msgid "Description"
-msgstr ""
+msgstr "Description"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:32
@@ -180,11 +180,11 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Working Directory"
-msgstr "Dossier de travail"
+msgstr "Répertoire de travail"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Browse…"
-msgstr ""
+msgstr "Parcourir…"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "<b>Application Details</b>"
@@ -269,7 +269,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
 msgid "Actions"
-msgstr ""
+msgstr "Actions"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:74
@@ -280,7 +280,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:75
 msgid "Generic Name"
-msgstr ""
+msgstr "Nom générique"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:77
@@ -337,7 +337,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:98
 msgid "Mimetypes"
-msgstr ""
+msgstr "Types MIME"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:100
@@ -352,7 +352,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:104
 msgid "Keywords"
-msgstr ""
+msgstr "Mots-clés"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:106
@@ -425,16 +425,16 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:131
 msgid "column"
-msgstr ""
+msgstr "colonne"
 
 #: ../menulibre/__init__.py:33
 msgid "Show debug messages"
-msgstr ""
+msgstr "Afficher les messages de débogage"
 
 #: ../menulibre/MenuEditor.py:92 ../menulibre/MenulibreApplication.py:1382
 #: ../menulibre/MenulibreApplication.py:2162
 msgid "Separator"
-msgstr ""
+msgstr "Séparateur"
 
 #. Standard Items
 #: ../menulibre/MenulibreApplication.py:59
@@ -463,7 +463,7 @@ msgstr "Internet"
 
 #: ../menulibre/MenulibreApplication.py:65
 msgid "Office"
-msgstr "Bureau"
+msgstr "Bureautique"
 
 #: ../menulibre/MenulibreApplication.py:66
 msgid "Settings"
@@ -550,7 +550,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:386
 msgid "Add Launcher..."
-msgstr ""
+msgstr "Ajouter un lanceur..."
 
 #: ../menulibre/MenulibreApplication.py:392
 msgid "Add _Directory..."
@@ -558,7 +558,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:393
 msgid "Add Directory..."
-msgstr ""
+msgstr "Ajouter un répertoire..."
 
 #: ../menulibre/MenulibreApplication.py:399
 msgid "_Add Separator..."
