--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-04-20 20:43-0400\n"
-"PO-Revision-Date: 2014-04-29 20:03+0000\n"
+"PO-Revision-Date: 2014-04-30 18:26+0000\n"
 "Last-Translator: Urien Desterres <urien.desterres@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-04-30 06:39+0000\n"
+"X-Launchpad-Export-Date: 2014-05-01 06:35+0000\n"
 "X-Generator: Launchpad (build 16985)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -54,7 +54,7 @@ msgstr "Annuler"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "Apply"
-msgstr ""
+msgstr "Appliquer"
 
 #: ../data/ui/MenulibreWindow.ui.h:7
 msgid "Icon Name"
@@ -566,7 +566,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:400
 msgid "Add Separator..."
-msgstr ""
+msgstr "Ajouter un séparateur..."
 
 #: ../menulibre/MenulibreApplication.py:406
 msgid "_Save"
@@ -601,7 +601,7 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:442
 #: ../menulibre/MenulibreApplication.py:2552
 msgid "Quit"
-msgstr ""
+msgstr "Quitter"
 
 #: ../menulibre/MenulibreApplication.py:448
 msgid "_Contents"
@@ -610,16 +610,16 @@ msgstr "_Contenus"
 #: ../menulibre/MenulibreApplication.py:449
 #: ../menulibre/MenulibreApplication.py:2550
 msgid "Help"
-msgstr ""
+msgstr "Aide"
 
 #: ../menulibre/MenulibreApplication.py:455
 msgid "_About"
-msgstr ""
+msgstr "À _propos"
 
 #: ../menulibre/MenulibreApplication.py:456
 #: ../menulibre/MenulibreApplication.py:2551
 msgid "About"
-msgstr ""
+msgstr "À propos"
 
 #. Create a new column.
 #: ../menulibre/MenulibreApplication.py:574
@@ -636,7 +636,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:830
 msgid "Category Name"
-msgstr ""
+msgstr "Nom de la catégorie"
 
 #: ../menulibre/MenulibreApplication.py:914
 msgid "This Entry"
@@ -658,12 +658,12 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:1027
 #: ../menulibre/MenulibreApplication.py:1465
 msgid "Save Changes"
-msgstr ""
+msgstr "Enregistrer les modifications"
 
 #: ../menulibre/MenulibreApplication.py:1028
 #: ../menulibre/MenulibreApplication.py:1466
 msgid "Don't Save"
-msgstr ""
+msgstr "Ne pas enregistrer"
 
 #: ../menulibre/MenulibreApplication.py:1150
 msgid "Select an image"
@@ -676,7 +676,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1156
 msgid "Images"
-msgstr ""
+msgstr "Images"
 
 #: ../menulibre/MenulibreApplication.py:1265
 msgid "Select a working directory..."
@@ -707,7 +707,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:1697
 msgid "You do not have permission to delete this file."
-msgstr ""
+msgstr "Vous n’avez pas la permission de supprimer ce fichier."
 
 #: ../menulibre/MenulibreApplication.py:2061
 msgid "Cannot add subdirectories to preinstalled system paths."
@@ -715,20 +715,20 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:2087
 msgid "New Launcher"
-msgstr ""
+msgstr "Nouveau lanceur"
 
 #: ../menulibre/MenulibreApplication.py:2137
 msgid "New Directory"
-msgstr ""
+msgstr "Nouveau répertoire"
 
 #: ../menulibre/MenulibreApplication.py:2466
 msgid "Are you sure you want to restore this launcher?"
-msgstr ""
+msgstr "Voulez-vous vraiment restaurer ce lanceur ?"
 
 #: ../menulibre/MenulibreApplication.py:2472
 #: ../menulibre/MenulibreApplication.py:2473
 msgid "Restore Launcher"
-msgstr ""
+msgstr "Restaurer le lanceur"
 
 #: ../menulibre/MenulibreApplication.py:2474
 msgid ""
@@ -738,28 +738,28 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:2489
 msgid "Are you sure you want to delete this separator?"
-msgstr ""
+msgstr "Voulez-vous vraiment supprimer ce séparateur ?"
 
 #: ../menulibre/MenulibreApplication.py:2492
 #, python-format
 msgid "Are you sure you want to delete \"%s\"?"
-msgstr ""
+msgstr "Voulez-vous vraiment supprimer « %s » ?"
 
 #: ../menulibre/MenulibreApplication.py:2494
 msgid "This cannot be undone."
-msgstr ""
+msgstr "Ceci est irréversible."
 
 #: ../menulibre/MenulibreApplication.py:2572
 msgid "Do you want to read the MenuLibre manual online?"
-msgstr ""
+msgstr "Voulez-vous lire le guide d’utilisation de MenuLibre en ligne ?"
 
 #: ../menulibre/MenulibreApplication.py:2578
 msgid "Read Online"
-msgstr ""
+msgstr "Lire en ligne"
 
 #: ../menulibre/MenulibreApplication.py:2579
 msgid "Online Documentation"
-msgstr ""
+msgstr "Documentation en ligne"
 
 #: ../menulibre/MenulibreApplication.py:2580
 msgid ""
@@ -770,11 +770,11 @@ msgstr ""
 #. Populate the AboutDialog with all the relevant details.
 #: ../menulibre/MenulibreApplication.py:2599
 msgid "About MenuLibre"
-msgstr ""
+msgstr "À propos de MenuLibre"
 
 #: ../menulibre/MenulibreApplication.py:2602
 msgid "Copyright © 2012-2014 Sean Davis"
-msgstr ""
+msgstr "Copyright © 2012-2014 Sean Davis"
 
 #: ../menulibre/MenulibreXdg.py:49
 msgid "New Menu Item"
