--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-04-20 20:43-0400\n"
-"PO-Revision-Date: 2014-04-30 18:26+0000\n"
+"PO-Revision-Date: 2014-05-02 15:17+0000\n"
 "Last-Translator: Urien Desterres <urien.desterres@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-05-01 06:35+0000\n"
+"X-Launchpad-Export-Date: 2014-05-03 06:41+0000\n"
 "X-Generator: Launchpad (build 16985)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -25,23 +25,23 @@ msgstr "Éditeur de menus"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
-msgstr "Ajouter ou supprimer des applications du menu"
+msgstr "Ajouter ou retirer des applications du menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
-msgstr ""
+msgstr "Ajouter un _lanceur"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Directory"
-msgstr ""
+msgstr "Ajouter un _répertoire"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Add _Separator"
-msgstr ""
+msgstr "Ajouter un _séparateur"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Icon Selection"
-msgstr ""
+msgstr "Choix de l’icône"
 
 #: ../data/ui/MenulibreWindow.ui.h:5 ../menulibre/MenulibreApplication.py:1029
 #: ../menulibre/MenulibreApplication.py:1153
@@ -58,7 +58,7 @@ msgstr "Appliquer"
 
 #: ../data/ui/MenulibreWindow.ui.h:7
 msgid "Icon Name"
-msgstr "Nom de l'icône"
+msgstr "Nom de l’icône"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Image File"
@@ -99,43 +99,43 @@ msgstr "_Fichier"
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "_Edit"
-msgstr "_Éditer"
+msgstr "É_dition"
 
 #: ../data/ui/MenulibreWindow.ui.h:18
 msgid "_Help"
-msgstr "_Aide"
+msgstr "Aid_e"
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Save Launcher"
-msgstr ""
+msgstr "Enregistrer le lanceur"
 
 #: ../data/ui/MenulibreWindow.ui.h:20 ../menulibre/MenulibreApplication.py:414
 msgid "Undo"
-msgstr "Annuler"
+msgstr "Défaire"
 
 #: ../data/ui/MenulibreWindow.ui.h:21 ../menulibre/MenulibreApplication.py:421
 msgid "Redo"
-msgstr "Répéter"
+msgstr "Refaire"
 
 #: ../data/ui/MenulibreWindow.ui.h:22 ../menulibre/MenulibreApplication.py:428
 msgid "Revert"
-msgstr "Réinitialiser"
+msgstr "Rétablir"
 
 #: ../data/ui/MenulibreWindow.ui.h:23 ../menulibre/MenulibreApplication.py:435
 msgid "Delete"
-msgstr ""
+msgstr "Supprimer"
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Search terms…"
-msgstr ""
+msgstr "Rechercher..."
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Move Up"
-msgstr "Monter"
+msgstr "Déplacer vers le haut"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Move Down"
-msgstr "Descendre"
+msgstr "Déplacer vers le bas"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "<big><b>Application Name</b></big>"
@@ -147,7 +147,7 @@ msgstr "Nom de l’application"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application Comment"
-msgstr ""
+msgstr "Infobulle de l’application"
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/MenulibreApplication.py:835
 msgid "Description"
@@ -188,12 +188,13 @@ msgstr "Parcourir…"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "<b>Application Details</b>"
-msgstr ""
+msgstr "<b>Détails de l’application</b>"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "\"Terminal\": Whether the program runs in a terminal window."
 msgstr ""
+"« Terminal » : si le programme s’exécute dans une fenêtre de terminal."
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Run in terminal"
@@ -233,7 +234,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "Hide from menus"
-msgstr "Masquer depuis menus"
+msgstr "Ne pas afficher dans le menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid "<b>Options</b>"
@@ -241,15 +242,15 @@ msgstr "<b>Options</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:65
 msgid "Add"
-msgstr ""
+msgstr "Ajouter"
 
 #: ../data/ui/MenulibreWindow.ui.h:66
 msgid "Remove"
-msgstr ""
+msgstr "Retirer"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
 msgid "Clear"
-msgstr ""
+msgstr "Vider"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Categories"
@@ -265,7 +266,7 @@ msgstr "Nom"
 
 #: ../data/ui/MenulibreWindow.ui.h:71
 msgid "Action Name"
-msgstr ""
+msgstr "Nom de l’action"
 
 #: ../data/ui/MenulibreWindow.ui.h:72
 msgid "Actions"
@@ -277,6 +278,7 @@ msgid ""
 "\"GenericName\": Generic name of the application, for example \"Web "
 "Browser\"."
 msgstr ""
+"« Nom générique » : nom générique de l’application, comme « Navigateur Web »."
 
 #: ../data/ui/MenulibreWindow.ui.h:75
 msgid "Generic Name"
@@ -296,7 +298,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:82
 msgid "Not Shown In"
-msgstr ""
+msgstr "Ne pas afficher dans"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:84
@@ -308,10 +310,18 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"« Afficher seulement dans » : une liste de chaines identifiant les "
+"environnements\n"
+"de bureau qui devraient afficher une certaine entrée. Ne peut pas figurer "
+"dans le\n"
+"même groupe que la clé « Ne pas afficher dans ».\n"
+"\n"
+"Exemples possibles : GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, "
+"Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:89
 msgid "Only Shown In"
-msgstr ""
+msgstr "Afficher seulement dans"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:91
@@ -334,6 +344,7 @@ msgstr ""
 #: ../data/ui/MenulibreWindow.ui.h:97
 msgid "\"MimeType\": The MIME type(s) supported by this application."
 msgstr ""
+"« Types MIME » : les types MIME pris en charge par cette application."
 
 #: ../data/ui/MenulibreWindow.ui.h:98
 msgid "Mimetypes"
@@ -405,23 +416,23 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:126
 msgid "Advanced"
-msgstr ""
+msgstr "Avancé"
 
 #: ../data/ui/MenulibreWindow.ui.h:127
 msgid "<small><i>Filename</i></small>"
-msgstr ""
+msgstr "<small><i>Nom du fichier</i></small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:128
 msgid "Select an icon…"
-msgstr ""
+msgstr "Sélectionner une icône..."
 
 #: ../data/ui/MenulibreWindow.ui.h:129
 msgid "<b>Select an icon</b>"
-msgstr ""
+msgstr "<b>Sélectionner une icône</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:130
 msgid "Search"
-msgstr ""
+msgstr "Rechercher"
 
 #: ../data/ui/MenulibreWindow.ui.h:131
 msgid "column"
@@ -497,11 +508,11 @@ msgstr ""
 #. GNOME Specific
 #: ../menulibre/MenulibreApplication.py:75
 msgid "GNOME application"
-msgstr ""
+msgstr "Application GNOME"
 
 #: ../menulibre/MenulibreApplication.py:76
 msgid "GTK+ application"
-msgstr ""
+msgstr "Application GTK+"
 
 #: ../menulibre/MenulibreApplication.py:77
 msgid "GNOME user configuration"
@@ -520,7 +531,7 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:82
 #: ../menulibre/MenulibreApplication.py:83
 msgid "Xfce menu item"
-msgstr ""
+msgstr "Élément du menu Xfce"
 
 #: ../menulibre/MenulibreApplication.py:84
 msgid "Xfce toplevel menu item"
@@ -546,7 +557,7 @@ msgstr "Autre"
 
 #: ../menulibre/MenulibreApplication.py:385
 msgid "Add _Launcher..."
-msgstr ""
+msgstr "Ajouter un _lanceur..."
 
 #: ../menulibre/MenulibreApplication.py:386
 msgid "Add Launcher..."
@@ -554,7 +565,7 @@ msgstr "Ajouter un lanceur..."
 
 #: ../menulibre/MenulibreApplication.py:392
 msgid "Add _Directory..."
-msgstr ""
+msgstr "Ajouter un _répertoire..."
 
 #: ../menulibre/MenulibreApplication.py:393
 msgid "Add Directory..."
@@ -562,7 +573,7 @@ msgstr "Ajouter un répertoire..."
 
 #: ../menulibre/MenulibreApplication.py:399
 msgid "_Add Separator..."
-msgstr ""
+msgstr "Ajouter un _séparateur..."
 
 #: ../menulibre/MenulibreApplication.py:400
 msgid "Add Separator..."
@@ -570,7 +581,7 @@ msgstr "Ajouter un séparateur..."
 
 #: ../menulibre/MenulibreApplication.py:406
 msgid "_Save"
-msgstr ""
+msgstr "_Enregistrer"
 
 #: ../menulibre/MenulibreApplication.py:407
 #: ../menulibre/MenulibreApplication.py:1030
@@ -580,23 +591,23 @@ msgstr "Enregistrer"
 
 #: ../menulibre/MenulibreApplication.py:413
 msgid "_Undo"
-msgstr ""
+msgstr "_Défaire"
 
 #: ../menulibre/MenulibreApplication.py:420
 msgid "_Redo"
-msgstr ""
+msgstr "_Refaire"
 
 #: ../menulibre/MenulibreApplication.py:427
 msgid "_Revert"
-msgstr ""
+msgstr "_Rétablir"
 
 #: ../menulibre/MenulibreApplication.py:434
 msgid "_Delete"
-msgstr ""
+msgstr "_Supprimer"
 
 #: ../menulibre/MenulibreApplication.py:441
 msgid "_Quit"
-msgstr ""
+msgstr "_Quitter"
 
 #: ../menulibre/MenulibreApplication.py:442
 #: ../menulibre/MenulibreApplication.py:2552
@@ -649,11 +660,13 @@ msgstr "Nouveau raccourci"
 #. Unsaved changes
 #: ../menulibre/MenulibreApplication.py:1019
 msgid "Do you want to save the changes before closing?"
-msgstr ""
+msgstr "Voulez-vous enregistrer les modifications avant de fermer ?"
 
 #: ../menulibre/MenulibreApplication.py:1020
 msgid "If you don't save the launcher, all the changes will be lost.'"
 msgstr ""
+"Si vous n’enregistrez pas le lanceur, toutes les modifications seront "
+"perdues."
 
 #: ../menulibre/MenulibreApplication.py:1027
 #: ../menulibre/MenulibreApplication.py:1465
@@ -667,12 +680,12 @@ msgstr "Ne pas enregistrer"
 
 #: ../menulibre/MenulibreApplication.py:1150
 msgid "Select an image"
-msgstr ""
+msgstr "Sélectionner une image"
 
 #: ../menulibre/MenulibreApplication.py:1154
 #: ../menulibre/MenulibreApplication.py:1273
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: ../menulibre/MenulibreApplication.py:1156
 msgid "Images"
@@ -680,30 +693,35 @@ msgstr "Images"
 
 #: ../menulibre/MenulibreApplication.py:1265
 msgid "Select a working directory..."
-msgstr ""
+msgstr "Sélectionnez un répertoire de travail..."
 
 #: ../menulibre/MenulibreApplication.py:1269
 msgid "Select an executable..."
-msgstr ""
+msgstr "Sélectionnez un exécutable..."
 
 #. Display a dialog saying this item is missing
 #: ../menulibre/MenulibreApplication.py:1429
 msgid "No Longer Installed"
-msgstr ""
+msgstr "N’est plus installé"
 
 #: ../menulibre/MenulibreApplication.py:1430
 msgid ""
 "This launcher has been removed from the system.\n"
 "Selecting the next available item."
 msgstr ""
+"Ce lanceur a été retiré du système.\n"
+"Sélection du prochain élément disponible."
 
 #: ../menulibre/MenulibreApplication.py:1456
 msgid "Do you want to save the changes before leaving this launcher?"
 msgstr ""
+"Voulez-vous enregistrer les modifications avant de quitter ce lanceur ?"
 
 #: ../menulibre/MenulibreApplication.py:1458
 msgid "If you don't save the launcher, all the changes will be lost."
 msgstr ""
+"Si vous n’enregistrez pas le lanceur, toutes les modifications seront "
+"perdues."
 
 #: ../menulibre/MenulibreApplication.py:1697
 msgid "You do not have permission to delete this file."
@@ -712,6 +730,8 @@ msgstr "Vous n’avez pas la permission de supprimer ce fichier."
 #: ../menulibre/MenulibreApplication.py:2061
 msgid "Cannot add subdirectories to preinstalled system paths."
 msgstr ""
+"Impossible d’ajouter des sous-répertoires aux chemins d'accès système "
+"préinstallés."
 
 #: ../menulibre/MenulibreApplication.py:2087
 msgid "New Launcher"
@@ -735,6 +755,8 @@ msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
 msgstr ""
+"Toutes les modifications effectuées depuis le dernier enregistrement seront "
+"perdues et non restaurables manuellement."
 
 #: ../menulibre/MenulibreApplication.py:2489
 msgid "Are you sure you want to delete this separator?"
@@ -766,6 +788,8 @@ msgid ""
 "You will be redirected to the documentation website where the help pages are "
 "maintained."
 msgstr ""
+"Vous allez être redirigé vers le site Web de documentation où les pages "
+"d’aide sont maintenues."
 
 #. Populate the AboutDialog with all the relevant details.
 #: ../menulibre/MenulibreApplication.py:2599
@@ -782,4 +806,4 @@ msgstr "Nouvel élément menu"
 
 #: ../menulibre/MenulibreXdg.py:51
 msgid "A small descriptive blurb about this application."
-msgstr "Un petit texte descriptif à propos de cette application."
+msgstr "Une petite présentation de cette application."
