--- a/po/de.po
+++ b/po/de.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2014-05-04 09:50-0400\n"
+"POT-Creation-Date: 2014-05-05 20:19-0400\n"
 "PO-Revision-Date: 2014-05-03 19:12+0000\n"
 "Last-Translator: Tobias Bannert <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-05-05 06:26+0000\n"
-"X-Generator: Launchpad (build 16985)\n"
+"X-Launchpad-Export-Date: 2014-05-06 07:24+0000\n"
+"X-Generator: Launchpad (build 16996)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -45,8 +45,8 @@ msgstr "Symbolauswahl"
 #: ../menulibre/MenulibreApplication.py:1153
 #: ../menulibre/MenulibreApplication.py:1272
 #: ../menulibre/MenulibreApplication.py:1467
-#: ../menulibre/MenulibreApplication.py:2560
-#: ../menulibre/MenulibreApplication.py:2666
+#: ../menulibre/MenulibreApplication.py:2565
+#: ../menulibre/MenulibreApplication.py:2671
 msgid "Cancel"
 msgstr "Abbrechen"
 
@@ -87,7 +87,7 @@ msgid "<b>Preview</b>"
 msgstr "<b>Vorschau</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:15 ../menulibre/MenulibreApplication.py:362
-#: ../menulibre/MenulibreApplication.py:2689
+#: ../menulibre/MenulibreApplication.py:2694
 msgid "MenuLibre"
 msgstr "MenuLibre"
 
@@ -222,6 +222,17 @@ msgid ""
 "If absent, a reasonable handling is up to implementations (assuming false,\n"
 "using StartupWMClass, etc.)."
 msgstr ""
+"„Startbenachrichtigung nutzen“: Falls wahr, ist es bekannt, dass die "
+"Anwendung eine\n"
+"„Entfernen“-Nachricht senden wird, mit der gesetzten DESKTOP_STARTUP_ID-\n"
+"Umgebungsvariable. Falls falsch, ist es bekannt, dass die Anwendung "
+"grundsätzlich\n"
+"nicht mit Startbenachrichtigungen funktioniert (in keinem Fenster angezeigt, "
+"stürzt\n"
+"selbst ab, wenn Start-WM-Klasse benutzt wird, etc.). Falls nicht angegeben, "
+"liegt es\n"
+"an der Implementierung, einen geeigneten Umgang zu finden (falsch annehmen,\n"
+"wenn StartupWMClass genutzt wird, etc.)."
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "Use startup notification"
@@ -428,6 +439,14 @@ msgid ""
 "existing files (e.g. due to a renaming) - by letting make install install a\n"
 "file with Hidden=true in it."
 msgstr ""
+"„Versteckt“: Versteckt könnte auch gelöscht genannt werden. Es\n"
+"bedeutet, dass der Nutzer (auf seiner Stufe) etwas gelöscht hat,\n"
+"dass auf einer anderen Stufe präsent war (auf einer höheren Stufe,\n"
+"z.B. im Systemverzeichnis). Es ist völlig identisch dazu, dass eine\n"
+".desktop-Datei nicht existiert, insofern es den Nutzer betrifft.\n"
+"Es kann auch für die „Deinstallation“ von Dateien verwendet\n"
+"werden (z.B. wegen Umbenennung), indem man „make install“ eine\n"
+"Datei mit „Hidden=true“ erstellen lässt."
 
 #: ../data/ui/MenulibreWindow.ui.h:116
 msgid "Hidden"
@@ -448,10 +467,18 @@ msgid ""
 "in their desktop files for compatibility with implementations that do not\n"
 "understand the DBusActivatable key."
 msgstr ""
+"„DBus-Aktivierbar“: Ein bool'scher Wert, der angibt, ob D-Bus-Aktivierung\n"
+"von dieser Anwendung unterstützt wird. Falls der Wert fehlt, ist falsch der\n"
+"Standardwert. Falls der Wert wahr ist, sollte die Implementierung den\n"
+"Befehl ignorieren und eine D-Bus-Nachricht senden, um die Anwendung\n"
+"zu starten. Unter D-Bus-Aktivierung finden sich mehr Informationen darüber,\n"
+"wie das funktioniert. Anwendungen sollten dennoch die Befehlszeile in\n"
+"ihren Desktop-Dateien aufnehmen für die Kompatibilität mit \n"
+"Implementierungen, die DBus-Aktivierungen nicht verstehen."
 
 #: ../data/ui/MenulibreWindow.ui.h:125
 msgid "DBUS Activatable"
-msgstr ""
+msgstr "DBus-Aktivierbar"
 
 #: ../data/ui/MenulibreWindow.ui.h:126
 msgid "Advanced"
@@ -482,7 +509,7 @@ msgid "Show debug messages"
 msgstr "Diagnosemeldungen anzeigen"
 
 #: ../menulibre/MenuEditor.py:86 ../menulibre/MenulibreApplication.py:1382
-#: ../menulibre/MenulibreApplication.py:2193
+#: ../menulibre/MenulibreApplication.py:2198
 msgid "Separator"
 msgstr "Trennlinie"
 
@@ -649,7 +676,7 @@ msgid "_Quit"
 msgstr "_Beenden"
 
 #: ../menulibre/MenulibreApplication.py:442
-#: ../menulibre/MenulibreApplication.py:2641
+#: ../menulibre/MenulibreApplication.py:2646
 msgid "Quit"
 msgstr "Beenden"
 
@@ -658,7 +685,7 @@ msgid "_Contents"
 msgstr "_Hilfethemen"
 
 #: ../menulibre/MenulibreApplication.py:449
-#: ../menulibre/MenulibreApplication.py:2639
+#: ../menulibre/MenulibreApplication.py:2644
 msgid "Help"
 msgstr "Hilfe"
 
@@ -667,7 +694,7 @@ msgid "_About"
 msgstr "_Über"
 
 #: ../menulibre/MenulibreApplication.py:456
-#: ../menulibre/MenulibreApplication.py:2640
+#: ../menulibre/MenulibreApplication.py:2645
 msgid "About"
 msgstr "Über"
 
@@ -704,6 +731,7 @@ msgstr "Wollen Sie die Änderungen vor dem Schließen speichern?"
 #: ../menulibre/MenulibreApplication.py:1020
 msgid "If you don't save the launcher, all the changes will be lost.'"
 msgstr ""
+"Wenn der Starter nicht gespeichert wird, werden alle Änderungen verworfen."
 
 #: ../menulibre/MenulibreApplication.py:1027
 #: ../menulibre/MenulibreApplication.py:1465
@@ -746,83 +774,93 @@ msgid ""
 "This launcher has been removed from the system.\n"
 "Selecting the next available item."
 msgstr ""
+"Dieser Starter wurde vom System entfernt.\n"
+"Nächstes verfügbares Element wird gewählt."
 
 #: ../menulibre/MenulibreApplication.py:1456
 msgid "Do you want to save the changes before leaving this launcher?"
 msgstr ""
+"Sollen die Änderungen gespeichert werden, vor dem Verlassen des Starters?"
 
 #: ../menulibre/MenulibreApplication.py:1458
 msgid "If you don't save the launcher, all the changes will be lost."
 msgstr ""
+"Wenn der Starter nicht gespeichert wird, werden alle Änderungen verworfen."
 
 #: ../menulibre/MenulibreApplication.py:1697
 msgid "You do not have permission to delete this file."
 msgstr "Sie haben keine Berechtigung diese Datei zu löschen."
 
-#: ../menulibre/MenulibreApplication.py:2092
+#: ../menulibre/MenulibreApplication.py:2094
 msgid "Cannot add subdirectories to preinstalled system paths."
 msgstr ""
+"Unterverzeichnisse können zu vorinstallierten Systempfaden nicht hinzugefügt "
+"werden."
 
-#: ../menulibre/MenulibreApplication.py:2118
+#: ../menulibre/MenulibreApplication.py:2120
 msgid "New Launcher"
 msgstr "Neuer Starter"
 
-#: ../menulibre/MenulibreApplication.py:2168
+#: ../menulibre/MenulibreApplication.py:2171
 msgid "New Directory"
 msgstr "Neuer Ordner"
 
-#: ../menulibre/MenulibreApplication.py:2555
+#: ../menulibre/MenulibreApplication.py:2560
 msgid "Are you sure you want to restore this launcher?"
-msgstr ""
+msgstr "Soll der Starter wirklich wiederhergestellt werden?"
 
-#: ../menulibre/MenulibreApplication.py:2561
-#: ../menulibre/MenulibreApplication.py:2562
+#: ../menulibre/MenulibreApplication.py:2566
+#: ../menulibre/MenulibreApplication.py:2567
 msgid "Restore Launcher"
 msgstr "Starter wiederherstellen"
 
-#: ../menulibre/MenulibreApplication.py:2563
+#: ../menulibre/MenulibreApplication.py:2568
 msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
 msgstr ""
+"Alle Änderung seit dem letzten Speichern werden verloren gehen und können "
+"nicht mehr automatisch wiederhergestellt werden."
 
-#: ../menulibre/MenulibreApplication.py:2578
+#: ../menulibre/MenulibreApplication.py:2583
 msgid "Are you sure you want to delete this separator?"
 msgstr "Sind Sie sicher, dass Sie diese Trennlinie löschen möchten?"
 
-#: ../menulibre/MenulibreApplication.py:2581
+#: ../menulibre/MenulibreApplication.py:2586
 #, python-format
 msgid "Are you sure you want to delete \"%s\"?"
 msgstr "Sind Sie sicher, dass Sie »%s« löschen wollen?"
 
-#: ../menulibre/MenulibreApplication.py:2583
+#: ../menulibre/MenulibreApplication.py:2588
 msgid "This cannot be undone."
 msgstr "Das kann nicht rückgängig gemacht werden."
 
-#: ../menulibre/MenulibreApplication.py:2661
+#: ../menulibre/MenulibreApplication.py:2666
 msgid "Do you want to read the MenuLibre manual online?"
 msgstr "Wollen Sie die Bedienungsanleitung von MenuLibre online lesen?"
 
-#: ../menulibre/MenulibreApplication.py:2667
+#: ../menulibre/MenulibreApplication.py:2672
 msgid "Read Online"
 msgstr "Online lesen"
 
-#: ../menulibre/MenulibreApplication.py:2668
+#: ../menulibre/MenulibreApplication.py:2673
 msgid "Online Documentation"
 msgstr "Online Dokumentation"
 
-#: ../menulibre/MenulibreApplication.py:2669
+#: ../menulibre/MenulibreApplication.py:2674
 msgid ""
 "You will be redirected to the documentation website where the help pages are "
 "maintained."
 msgstr ""
+"Sie werden auf die Dokumentationsseite weitergeleitet, wo die Hilfeseiten "
+"verwaltet werden."
 
 #. Populate the AboutDialog with all the relevant details.
-#: ../menulibre/MenulibreApplication.py:2688
+#: ../menulibre/MenulibreApplication.py:2693
 msgid "About MenuLibre"
 msgstr "Über MenuLibre"
 
-#: ../menulibre/MenulibreApplication.py:2691
+#: ../menulibre/MenulibreApplication.py:2696
 msgid "Copyright © 2012-2014 Sean Davis"
 msgstr "Urheberrecht © 2012-2014 Sean Davis"
 
