--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,7 @@ UNRELEASED, MenuLibre 2.0.4
   . Moving launchers to another category do not save immediately (LP: #1313586)
   . Enable saving a launcher any time a field is modified (LP: #1315878)
   . New launchers are replaced with existing ones when removed (LP: #1315890)
+  . Launchers in new directory have X-Xfce-Toplevel category (LP: #1315874)
 
 
 11 Mar 2014, MenuLibre 2.0.3
