--- a/po/de.po
+++ b/po/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-05-11 23:11-0400\n"
-"PO-Revision-Date: 2014-05-03 19:12+0000\n"
-"Last-Translator: Tobias Bannert <Unknown>\n"
+"PO-Revision-Date: 2014-05-05 10:21+0000\n"
+"Last-Translator: Jonatan Zeidler <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-05-12 06:35+0000\n"
+"X-Launchpad-Export-Date: 2014-05-12 07:08+0000\n"
 "X-Generator: Launchpad (build 16996)\n"
 
 #: ../menulibre.desktop.in.h:1
