Update version number. 2.0.4 Release time.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 MenuLibre                                                                  NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-UNRELEASED, MenuLibre 2.0.4
+13 May 2014, MenuLibre 2.0.4
 
 - General:
   . Strikethrough is now used to make separators look better
