--- a/po/ml.po
+++ b/po/ml.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-12 21:39-0400\n"
-"PO-Revision-Date: 2014-02-10 23:30+0000\n"
-"Last-Translator: STyM Alfazz <Unknown>\n"
+"POT-Creation-Date: 2014-05-13 21:45-0400\n"
+"PO-Revision-Date: 2013-12-08 06:11+0000\n"
+"Last-Translator: Stym alfaZ <Unknown>\n"
 "Language-Team: Malayalam <ml@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-05-13 06:36+0000\n"
+"X-Launchpad-Export-Date: 2014-05-14 06:16+0000\n"
 "X-Generator: Launchpad (build 17002)\n"
 "Language: ml\n"
 
