--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-13 21:45-0400\n"
-"PO-Revision-Date: 2014-05-06 11:50+0000\n"
-"Last-Translator: Urien Desterres <urien.desterres@gmail.com>\n"
+"PO-Revision-Date: 2014-05-18 21:06+0000\n"
+"Last-Translator: jc1 <jc1.quebecos@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-05-15 06:07+0000\n"
+"X-Launchpad-Export-Date: 2014-05-19 06:17+0000\n"
 "X-Generator: Launchpad (build 17007)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -99,11 +99,11 @@ msgstr "_Fichier"
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "_Edit"
-msgstr "É_dition"
+msgstr "_Éditer"
 
 #: ../data/ui/MenulibreWindow.ui.h:18
 msgid "_Help"
-msgstr "Aid_e"
+msgstr "_Aide"
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Save Launcher"
