--- a/po/pl.po
+++ b/po/pl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-13 21:45-0400\n"
-"PO-Revision-Date: 2014-04-23 06:12+0000\n"
-"Last-Translator: Piotr Sokół <Unknown>\n"
+"PO-Revision-Date: 2014-05-20 10:28+0000\n"
+"Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
 "Language-Team: polski <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-05-15 06:07+0000\n"
-"X-Generator: Launchpad (build 17007)\n"
+"X-Launchpad-Export-Date: 2014-05-22 06:40+0000\n"
+"X-Generator: Launchpad (build 17017)\n"
 "Language: \n"
 
 #: ../menulibre.desktop.in.h:1
@@ -198,7 +198,7 @@ msgstr "Dodaje parametr „Terminal”: uruchamia program w oknie terminala"
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Run in terminal"
-msgstr "Uruchamianie w terminalu"
+msgstr "Uruchamiaj w terminalu"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:50
