--- a/po/de.po
+++ b/po/de.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-05-13 21:45-0400\n"
-"PO-Revision-Date: 2014-05-03 19:12+0000\n"
+"PO-Revision-Date: 2014-06-05 15:45+0000\n"
 "Last-Translator: Tobias Bannert <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-05-15 06:07+0000\n"
-"X-Generator: Launchpad (build 17007)\n"
+"X-Launchpad-Export-Date: 2014-06-06 06:30+0000\n"
+"X-Generator: Launchpad (build 17031)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Menübearbeiter"
+msgstr "Menübearbeitung"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
