--- a/po/ms.po
+++ b/po/ms.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-13 21:45-0400\n"
-"PO-Revision-Date: 2014-01-23 06:17+0000\n"
+"PO-Revision-Date: 2014-06-09 04:51+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-05-15 06:07+0000\n"
-"X-Generator: Launchpad (build 17007)\n"
+"X-Launchpad-Export-Date: 2014-06-09 06:23+0000\n"
+"X-Generator: Launchpad (build 17031)\n"
 "Language: ms\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -307,6 +307,12 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"\"OnlyShowIn\": Satu senarai rentetan yang mengenalpasti persekitaran yang\n"
+"patut paparkan masukan desktop yang diberi. Hanya salah satu dari kunci ini\n"
+"sama ada OnlyShowIn atau NotShowIn, muncul di dalam kumpulan.\n"
+"\n"
+"Nilai yang mungkin termasuklah: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
+"Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:89
 msgid "Only Shown In"
@@ -381,6 +387,13 @@ msgid ""
 "existing files (e.g. due to a renaming) - by letting make install install a\n"
 "file with Hidden=true in it."
 msgstr ""
+"\"Hidden\": Hidden sepatutnya dipanggil Deleted. Ia bermaksud pengguna\n"
+"memadam (pada aras ini) sesuatu yang telah ada (pada aras lebih tinggi,\n"
+"cth. di dalam dir system). Ia menyamai dengan fail .desktop tetapi tidak\n"
+"wujud langsung, sehinggalah pengguna berminat mengenainya. Ia juga\n"
+"boleh digunakan untuk \"uninstall\" fail sedia ada (cth. disebabkan oleh\n"
+"proses penamaan semula) -dengan membiarkan make install pasang\n"
+"fail dengan Hidden=true di dalamnya."
 
 #: ../data/ui/MenulibreWindow.ui.h:116
 msgid "Hidden"
