Launchpad automatic translations update.

--- a/po/fr.po
+++ b/po/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-13 21:45-0400\n"
-"PO-Revision-Date: 2014-05-18 21:06+0000\n"
-"Last-Translator: jc1 <jc1.quebecos@gmail.com>\n"
+"PO-Revision-Date: 2014-07-04 16:22+0000\n"
+"Last-Translator: Yannick Le Guen <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-05-19 06:17+0000\n"
-"X-Generator: Launchpad (build 17007)\n"
+"X-Launchpad-Export-Date: 2014-07-05 05:50+0000\n"
+"X-Generator: Launchpad (build 17086)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
@@ -226,6 +226,16 @@ msgid ""
 "If absent, a reasonable handling is up to implementations (assuming false,\n"
 "using StartupWMClass, etc.)."
 msgstr ""
+"\"Notification de démarrage\" : Si activé, il est CONNU que l'application "
+"enverra un message\n"
+"\"supprimer\" lorsqu'elle est démarrée avec la variable d'environnement "
+"DESKTOP_STARTUP_ID définie. Si\n"
+"désactivé, il est CONNU que l'application ne fonctionne pas du tout avec\n"
+"la notification de démarrage (aucune fenêtre affichée, plante même avec "
+"l'utilisation de StartupWMClass, etc.).\n"
+"Si absent, un traitement raisonnable est appliqué par les implémentations "
+"(désactivation par défaut,\n"
+"utilisation de StartupVMClass, etc.)."
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "Use startup notification"
@@ -243,6 +253,15 @@ msgid ""
 "having a menu entry for it (there are tons of good reasons for this,\n"
 "including e.g. the netscape -remote, or kfmclient openURL kind of stuff)."
 msgstr ""
+"\"Ne pas afficher\" : NoDisplay signifie \"cette application existe, mais ne "
+"pas l'afficher dans\n"
+"les menus\". Ceci peut être utile pour associer par ex. cette application "
+"avec des types\n"
+"MIME, de sorte qu'elle soit lancée depuis un gestionnaire de fichiers (ou "
+"d'autres applications), sans\n"
+"avoir de lanceur dans le menu (il y a des tonnes de bonnes raisons pour "
+"cela,\n"
+"parmi lesquelles netscape -remote, ou des choses du genre kfmclient openURL)."
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "Hide from menus"
@@ -355,10 +374,18 @@ msgid ""
 "not executable, the entry may be ignored (not be used in menus, for "
 "example). "
 msgstr ""
+"\"Tester l'exécutable\" : Chemin vers un fichier exécutable sur le disque "
+"utilisé pour déterminer si le programme\n"
+"est vraiment installé. Si le chemin n'est pas un chemin absolu, le fichier "
+"est recherché\n"
+"via la variable d'environnement $PATH. Si le fichier n'est pas présent ou "
+"s'il n'est\n"
+"pas exécutable, le lanceur peut être ignoré (ne pas être utilisé dans les "
+"menus, par exemple). "
 
 #: ../data/ui/MenulibreWindow.ui.h:95
 msgid "Try Exec"
-msgstr ""
+msgstr "Tester l'exécutable"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:97
@@ -416,6 +443,17 @@ msgid ""
 "existing files (e.g. due to a renaming) - by letting make install install a\n"
 "file with Hidden=true in it."
 msgstr ""
+"\"Caché\" : \"Caché\" aurait du s'appeler \"Supprimé\". Cela signifie que "
+"l'utilisateur a supprimé\n"
+"(à son niveau) quelque chose qui était présent (à un plus haut niveau, par "
+"ex. dans les\n"
+"répertoires système). Cela équivaut scrictement à n'avoir aucun fichier "
+".desktop existant du\n"
+"tout, en ce qui concerne cet utilisateur. Cela peut aussi être utilisé pour "
+"\"désinstaller\"\n"
+"des fichiers existants (par ex. suite à un renommage) - en laissant \"make "
+"install\" installer un\n"
+"fichier avec \"Hidden=true\" dedans."
 
 #: ../data/ui/MenulibreWindow.ui.h:116
 msgid "Hidden"
